<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/framePerimetroTriangular"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".GastoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_dark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:background="@drawable/fondo_datos">
            android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_dark"
            tools:context=".OpcionesFragment">


            <RadioGroup
                android:id="@+id/grupoPerimetroTriangular"
                android:layout_width="370dp"
                android:layout_height="168dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp">

                <RadioButton
                    android:id="@+id/perimetroPerimetroTriangular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/perimetro_area" />

                <RadioButton
                    android:id="@+id/radioHidraulicoPerimetroTriangular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_hidraulico" />

                <RadioButton
                    android:id="@+id/velocidadPerimetroTriangular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/velocidad" />


                <RadioButton
                    android:id="@+id/areaPerimetroTriangular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/area" />

                <RadioButton
                    android:id="@+id/radioCaudalPerimetroTriangular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/caudal" />
            </RadioGroup>

            <TextView
                android:id="@+id/txt_calcularOpcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="29dp"
                android:text="@string/calcular"
                android:textColor="@android:color/background_dark" />


            <TextView
                android:id="@+id/txt_tirantePerimetroTriangular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/grupoPerimetroTriangular"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/seapacion_textView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/separacion_primer_dato"
                android:layout_marginEnd="@dimen/separacion_textView_editText"
                android:layout_marginRight="7dp"
                android:layout_toStartOf="@+id/editTirantePerimetroTriangular"
                android:layout_toLeftOf="@+id/editTirantePerimetroTriangular"
                android:text="@string/tirante"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_taludPerimetroTriangular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_tirantePerimetroTriangular"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/seapacion_textView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/separacion_entre_TextView_perimetro_triangular"
                android:layout_marginEnd="@dimen/separacion_textView_editText"
                android:layout_marginRight="-19dp"
                android:layout_toStartOf="@+id/editTaludPerimetroTriangular"
                android:layout_toLeftOf="@+id/editTaludPerimetroTriangular"
                android:text="@string/pendiente"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTirantePerimetroTriangular"
                android:layout_width="88dp"
                android:layout_height="50dp"
                android:layout_below="@+id/grupoPerimetroTriangular"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="@dimen/seaparcion_primer_dato_editText"
                android:layout_marginEnd="@dimen/seapacion_editText_orillaDerecha"
                android:layout_marginRight="77dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTaludPerimetroTriangular"
                android:layout_width="88dp"
                android:layout_height="50dp"
                android:layout_below="@+id/editTirantePerimetroTriangular"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="34dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="@dimen/separacion_editText_perimetro_triangular"
                android:layout_marginEnd="@dimen/seapacion_editText_orillaDerecha"
                android:layout_marginRight="77dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/calcular_botonPerimetroTriangular"
                android:layout_width="@dimen/ancho_botones"
                android:layout_height="@dimen/altura_botones"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/separacion_botones_orillas"
                android:layout_marginLeft="81dp"
                android:layout_marginTop="500dp"
                android:background="@drawable/redondo_botones"
                android:text="@string/calcular_boton" />

            <Button
                android:id="@+id/limpiar_botonPerimetroTriangular"
                android:layout_width="@dimen/ancho_botones"
                android:layout_height="@dimen/altura_botones"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="500dp"
                android:layout_marginEnd="@dimen/separacion_botones_orillas"
                android:layout_marginRight="99dp"
                android:background="@drawable/redondo_botones"
                android:text="@string/limpiar_boton" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="@dimen/separacion_txt_resultado"
                android:layout_marginLeft="82dp"
                android:layout_marginTop="557dp"
                android:layout_marginEnd="@dimen/separacion_txt_resultado"
                android:layout_marginRight="126dp"
                android:gravity="center"
                android:text="@string/resultado"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/seapacion_textView"
                android:layout_marginLeft="133dp"
                android:layout_marginTop="631dp"
                android:text="@string/areaHidraulica"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_ResultadoAreaTriangular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="631dp"
                android:layout_marginEnd="@dimen/seapacion_textView"
                android:layout_marginRight="162dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/seapacion_textView"
                android:layout_marginLeft="129dp"
                android:layout_marginTop="723dp"
                android:text="@string/titulo_perimetro"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_perimetroTriangular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="723dp"
                android:layout_marginEnd="@dimen/seapacion_textView"
                android:layout_marginRight="151dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>

</FrameLayout>